--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: white; 
+    background-color: white;
     color: #333;
 }
 
@@ -31,7 +31,7 @@ p {
 }
 
 header {
-    background-color: rgb(190, 237, 243); 
+    background-color: rgb(190, 237, 243);
     color: black;
     padding: 20px 0;
 }
@@ -61,14 +61,13 @@ nav {
     align-items: center;
 }
 
-.nav-items li{
+.nav-items li {
     margin-right: auto;
 }
 
 nav a {
-    color: black(14, 11, 11);
+    color: rgb(14, 11, 11);
     text-decoration: none;
-
 }
 
 .intro {
@@ -135,7 +134,7 @@ nav a {
 }
 
 .service-card {
-    background-color: #f0f0f0; 
+    background-color: #f0f0f0;
     padding: 20px;
     margin: 10px;
     border-radius: 5px;
@@ -156,7 +155,7 @@ nav a {
 }
 
 .social {
-    background-color: white; 
+    background-color: white;
     color: black;
     padding: 20px 0;
     text-align: center;
@@ -186,4 +185,59 @@ footer {
 
 footer p {
     margin: 0;
+}
+
+@media (max-width: 768px) {
+    .nav-items {
+        flex-direction: column;
+        width: auto;
+    }
+
+    .profile-image {
+        float: none;
+        margin: 20px auto;
+    }
+
+    .profile-image img {
+        width: 200px;
+        height: 200px;
+    }
+
+    .about {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .service-cards {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .service-card {
+        width: 90%;
+    }
+}
+
+@media (max-width: 480px) {
+    .nav-items {
+        gap: 5px;
+    }
+
+    .cta1, .cta2 {
+        width: 100%;
+        margin: 10px 0;
+    }
+
+    .skills {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .skill {
+        margin: 5px 0;
+    }
+
+    .social-media li {
+        margin: 20px;
+    }
 }
